--- a/climb-blog-front/src/pages/app/App.scss
+++ b/climb-blog-front/src/pages/app/App.scss
@@ -1,1 +1,13 @@
-
+.wrap{
+  height: 100%;
+}
+.app{
+  width: 80%;
+  margin:0 auto;
+  height: 100%;
+  display: flex;
+  flex-flow: wrap;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
+}
